// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section: levels: should render primary sections 1`] = `
<div
  className="Section__root Section__primary"
>
  Test content
</div>
`;

exports[`Section: levels: should render secondary sections 1`] = `
<div
  className="Section__root Section__secondary"
>
  Test content
</div>
`;

exports[`Section: should accept additional classnames and place them on the root 1`] = `
<div
  className="testClass Section__root Section__secondary"
>
  Test content
</div>
`;

exports[`Section: should accept additional props 1`] = `
<div
  className="Section__root"
  testProp={true}
>
  Test content
</div>
`;

exports[`Section: should render multiple classes together 1`] = `
<div
  className="Section__root Section__slim Section__info Section__secondary"
>
  Test content
</div>
`;

exports[`Section: should render the header style 1`] = `
<div
  className="Section__root Section__header"
>
  Test content
</div>
`;

exports[`Section: should render the pullout style 1`] = `
<div
  className="Section__root Section__pullout"
>
  Test content
</div>
`;

exports[`Section: should render the slim style 1`] = `
<div
  className="Section__root Section__slim"
>
  Test content
</div>
`;

exports[`Section: types: should render critical sections 1`] = `
<div
  className="Section__root Section__critical"
>
  Test content
</div>
`;

exports[`Section: types: should render help sections 1`] = `
<div
  className="Section__root Section__help"
>
  Test content
</div>
`;

exports[`Section: types: should render info sections 1`] = `
<div
  className="Section__root Section__info"
>
  Test content
</div>
`;

exports[`Section: types: should render positive sections 1`] = `
<div
  className="Section__root Section__positive"
>
  Test content
</div>
`;
